Moved all strings to strings.xml

--- a/app/src/main/res/layout/change_password_activity.xml
+++ b/app/src/main/res/layout/change_password_activity.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:hint="New Password"/>
+        android:hint="@string/password"/>
 
     <EditText
         android:id="@+id/change_password_repeat"
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:hint="Repeat Password"/>
+        android:hint="@string/repeat_password"/>
 
     <RelativeLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/large_button"
-            android:text="Change Password"/>
+            android:text="@string/change_password"/>
         <ProgressBar
             android:id="@+id/change_password_progress"
             style="?android:attr/progressBarStyleSmall"
