--- a/app/src/main/res/layout/forgot_password_activity.xml
+++ b/app/src/main/res/layout/forgot_password_activity.xml
@@ -17,14 +17,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:hint="Email"/>
+        android:hint="@string/email"/>
 
     <EditText
         android:id="@+id/forgot_password_passcode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
-        android:hint="4-digit passcode"/>
+        android:hint="@string/digit_password"/>
 
     <RelativeLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/large_button"
-            android:text="Check Passcode"/>
+            android:text="@string/check_passcode"/>
         <ProgressBar
             android:id="@+id/forgot_password_change_progress"
             style="?android:attr/progressBarStyleSmall"
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/large_button"
-            android:text="Email me the passcode"/>
+            android:text="@string/email_passcode"/>
         <ProgressBar
             android:id="@+id/forgot_password_request_progress"
             style="?android:attr/progressBarStyleSmall"
