--- a/app/src/main/res/layout/team_list_fragment.xml
+++ b/app/src/main/res/layout/team_list_fragment.xml
@@ -5,6 +5,7 @@ android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
     <LinearLayout
+        android:baselineAligned="false"
         android:id="@+id/team_list_headers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,7 +21,7 @@ android:layout_width="match_parent"
                 android:id="@+id/team_list_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Team Name"
+                android:text="@string/team_name"
                 android:textStyle="bold"
                 android:textSize="16sp"/>
             <CheckBox
@@ -45,7 +46,7 @@ android:layout_width="match_parent"
                 android:id="@+id/team_list_owner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Owner"
+                android:text="@string/owner"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:gravity="center"/>
@@ -70,7 +71,7 @@ android:layout_width="match_parent"
                 android:id="@+id/team_list_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Value"
+                android:text="@string/value"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:gravity="center"/>
@@ -95,7 +96,7 @@ android:layout_width="match_parent"
                 android:id="@+id/team_list_points"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Points"
+                android:text="@string/points"
                 android:textStyle="bold"
                 android:textSize="16sp"/>
             <CheckBox
