--- a/app/src/main/res/layout/loading.xml
+++ b/app/src/main/res/layout/loading.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Players warming up ;)"
+        android:text="@string/loading_message"
         style="@style/medium_text"
         android:layout_gravity="center_horizontal"
         android:gravity="bottom"/>
