--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -17,33 +17,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:hint="Username"/>
+        android:hint="@string/username"/>
 
     <EditText
         android:id="@+id/register_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:hint="Email"/>
+        android:hint="@string/email"/>
     <EditText
         android:id="@+id/register_repeat_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:hint="Repeat Email"/>
+        android:hint="@string/repeat_email"/>
 
     <EditText
         android:id="@+id/register_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"/>
     
     <EditText
         android:id="@+id/register_repeat_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Repeat Password"
+        android:hint="@string/repeat_password"
         android:inputType="textPassword"/>
 
     <RelativeLayout android:layout_width="match_parent"
@@ -55,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/large_button"
-            android:text="Register"/>
+            android:text="@string/register"/>
         <ProgressBar
             android:id="@+id/register_progress"
             style="?android:attr/progressBarStyleSmall"
