--- a/app/src/main/res/layout/tables_fragment.xml
+++ b/app/src/main/res/layout/tables_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
@@ -21,7 +20,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="16dp"
                 android:paddingStart="16dp"
-                android:text="First Team"
+                android:text="@string/first_team"
                 android:textColor="@color/textPrimary"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -31,12 +30,12 @@
                 <TextView
                     android:id="@+id/tables_first_team_bucs"
                     style="@style/tables_text_view"
-                    android:text="BUCS League"/>
+                    android:text="@string/bucs_league"/>
 
                 <TextView
                     android:id="@+id/tables_first_team_bucs_cup"
                     style="@style/tables_text_view"
-                    android:text="BUCS Cup"/>
+                    android:text="@string/bucs_cup"/>
 
             </LinearLayout>
 
@@ -48,12 +47,12 @@
                 <TextView
                     android:id="@+id/tables_first_team_lusl"
                     style="@style/tables_text_view"
-                    android:text="LUSL League"/>
+                    android:text="@string/lusl_league"/>
 
                 <TextView
                     android:id="@+id/tables_first_team_lusl_cup"
                     style="@style/tables_text_view"
-                    android:text="LUSL Cup"/>
+                    android:text="@string/lusl_cup"/>
 
             </LinearLayout>
 
@@ -65,7 +64,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="16dp"
                 android:paddingStart="16dp"
-                android:text="Second Team"
+                android:text="@string/second_team"
                 android:textColor="@color/textPrimary"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -75,12 +74,12 @@
                 <TextView
                     android:id="@+id/tables_second_team_bucs"
                     style="@style/tables_text_view"
-                    android:text="BUCS League"/>
+                    android:text="@string/bucs_league"/>
 
                 <TextView
                     android:id="@+id/tables_second_team_bucs_cup"
                     style="@style/tables_text_view"
-                    android:text="BUCS Cup"/>
+                    android:text="@string/bucs_cup"/>
 
             </LinearLayout>
 
@@ -92,12 +91,12 @@
                 <TextView
                     android:id="@+id/tables_second_team_lusl"
                     style="@style/tables_text_view"
-                    android:text="LUSL League"/>
+                    android:text="@string/lusl_league"/>
 
                 <TextView
                     android:id="@+id/tables_second_team_lusl_cup"
                     style="@style/tables_text_view"
-                    android:text="LUSL Cup"/>
+                    android:text="@string/lusl_cup"/>
 
             </LinearLayout>
 
@@ -109,7 +108,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="16dp"
                 android:paddingStart="16dp"
-                android:text="Third Team"
+                android:text="@string/third_team"
                 android:textColor="@color/textPrimary"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -119,12 +118,12 @@
                 <TextView
                     android:id="@+id/tables_third_team_bucs"
                     style="@style/tables_text_view"
-                    android:text="BUCS League"/>
+                    android:text="@string/bucs_league"/>
 
                 <TextView
                     android:id="@+id/tables_third_team_bucs_cup"
                     style="@style/tables_text_view"
-                    android:text="BUCS Cup"/>
+                    android:text="@string/bucs_cup"/>
 
             </LinearLayout>
 
@@ -136,12 +135,12 @@
                 <TextView
                     android:id="@+id/tables_third_team_lusl"
                     style="@style/tables_text_view"
-                    android:text="LUSL League"/>
+                    android:text="@string/lusl_league"/>
 
                 <TextView
                     android:id="@+id/tables_third_team_lusl_cup"
                     style="@style/tables_text_view"
-                    android:text="LUSL Cup"/>
+                    android:text="@string/lusl_cup"/>
 
             </LinearLayout>
 
@@ -153,7 +152,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="16dp"
                 android:paddingStart="16dp"
-                android:text="Fourth Team"
+                android:text="@string/fourth_team"
                 android:textColor="@color/textPrimary"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -163,12 +162,12 @@
                 <TextView
                     android:id="@+id/tables_fourth_team_bucs"
                     style="@style/tables_text_view"
-                    android:text="BUCS League"/>
+                    android:text="@string/bucs_league"/>
 
                 <TextView
                     android:id="@+id/tables_fourth_team_bucs_cup"
                     style="@style/tables_text_view"
-                    android:text="BUCS Cup"/>
+                    android:text="@string/bucs_cup"/>
 
             </LinearLayout>
 
@@ -180,12 +179,12 @@
                 <TextView
                     android:id="@+id/tables_fourth_team_lusl"
                     style="@style/tables_text_view"
-                    android:text="LUSL League"/>
+                    android:text="@string/lusl_league"/>
 
                 <TextView
                     android:id="@+id/tables_fourth_team_lusl_cup"
                     style="@style/tables_text_view"
-                    android:text="LUSL Cup"/>
+                    android:text="@string/lusl_cup"/>
 
             </LinearLayout>
 
@@ -197,7 +196,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="16dp"
                 android:paddingStart="16dp"
-                android:text="Fifth Team"
+                android:text="@string/fifth_team"
                 android:textColor="@color/textPrimary"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -207,12 +206,12 @@
                 <TextView
                     android:id="@+id/tables_fifth_team_bucs"
                     style="@style/tables_text_view"
-                    android:text="BUCS League"/>
+                    android:text="@string/bucs_league"/>
 
                 <TextView
                     android:id="@+id/tables_fifth_team_bucs_cup"
                     style="@style/tables_text_view"
-                    android:text="BUCS Cup"/>
+                    android:text="@string/bucs_cup"/>
 
             </LinearLayout>
 
@@ -224,12 +223,12 @@
                 <TextView
                     android:id="@+id/tables_fifth_team_lusl"
                     style="@style/tables_text_view"
-                    android:text="LUSL League"/>
+                    android:text="@string/lusl_league"/>
 
                 <TextView
                     android:id="@+id/tables_fifth_team_lusl_cup"
                     style="@style/tables_text_view"
-                    android:text="LUSL Cup"/>
+                    android:text="@string/lusl_cup"/>
 
             </LinearLayout>
 
@@ -241,7 +240,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="16dp"
                 android:paddingStart="16dp"
-                android:text="Sixth Team"
+                android:text="@string/sixth_team"
                 android:textColor="@color/textPrimary"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -251,12 +250,12 @@
                 <TextView
                     android:id="@+id/tables_sixth_team_bucs"
                     style="@style/tables_text_view"
-                    android:text="BUCS League"/>
+                    android:text="@string/bucs_league"/>
 
                 <TextView
                     android:id="@+id/tables_sixth_team_bucs_cup"
                     style="@style/tables_text_view"
-                    android:text="BUCS Cup"/>
+                    android:text="@string/bucs_cup"/>
 
             </LinearLayout>
 
@@ -268,12 +267,12 @@
                 <TextView
                     android:id="@+id/tables_sixth_team_lusl"
                     style="@style/tables_text_view"
-                    android:text="LUSL League"/>
+                    android:text="@string/lusl_league"/>
 
                 <TextView
                     android:id="@+id/tables_sixth_team_lusl_cup"
                     style="@style/tables_text_view"
-                    android:text="LUSL Cup"/>
+                    android:text="@string/lusl_cup"/>
 
             </LinearLayout>
 
@@ -285,7 +284,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="16dp"
                 android:paddingStart="16dp"
-                android:text="Seventh Team"
+                android:text="@string/seventh_team"
                 android:textColor="@color/textPrimary"/>
 
             <LinearLayout
@@ -296,12 +295,12 @@
                 <TextView
                     android:id="@+id/tables_seventh_team_lusl"
                     style="@style/tables_text_view"
-                    android:text="LUSL League"/>
+                    android:text="@string/lusl_league"/>
 
                 <TextView
                     android:id="@+id/tables_seventh_team_lusl_cup"
                     style="@style/tables_text_view"
-                    android:text="LUSL Cup"/>
+                    android:text="@string/lusl_cup"/>
 
             </LinearLayout>
         </LinearLayout>
