--- a/app/src/main/res/layout/team_display_no_button_fragment.xml
+++ b/app/src/main/res/layout/team_display_no_button_fragment.xml
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Points"
+            android:text="@string/points"
             style="@style/medium_text"
             android:textColor="@color/textPrimary"/>
         <TextView
@@ -37,7 +37,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="This week"
+            android:text="@string/this_week"
             style="@style/medium_text"
             android:textColor="@color/textPrimary"/>
         <TextView
@@ -61,6 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:src="@drawable/pitch"
         android:layout_below="@+id/info"
         android:scaleType="fitStart"/>
