--- a/app/src/main/res/layout/team_stats_summary_fragment.xml
+++ b/app/src/main/res/layout/team_stats_summary_fragment.xml
@@ -17,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/button_min_height"
                 android:gravity="center_vertical"
-                android:text="Match Summary"
+                android:text="@string/match_summary"
                 style="@style/medium_text"
                 android:background="@color/colorPrimaryLight"
                 android:textColor="@color/textPrimary"
@@ -34,15 +34,28 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="IC : Opponent"
+                    android:text="@string/ic"
                     style="@style/medium_text"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" : "
+                    style="@style/medium_text"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/opponent"
+                    style="@style/medium_text"/>
+
                 <TextView
                     android:id="@+id/team_stats_summary_ic_score"
                     android:layout_width="0dp"
                     android:layout_weight="0.75"
                     android:layout_height="wrap_content"
                     tools:text="1"
-                    android:gravity="right"
+                    android:gravity="end"
                     style="@style/medium_text"/>
                 <TextView
                     android:layout_width="0dp"
@@ -69,7 +82,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/button_min_height"
                 android:gravity="center_vertical"
-                android:text="Appearances"
+                android:text="@string/apps"
                 style="@style/medium_text"
                 android:background="@color/colorPrimaryLight"
                 android:textColor="@color/textPrimary"
@@ -81,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/button_min_height"
                 android:gravity="center_vertical"
-                android:text="Subs"
+                android:text="@string/sub_apps"
                 style="@style/medium_text"
                 android:background="@color/colorPrimaryLight"
                 android:textColor="@color/textPrimary"
@@ -99,7 +112,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/large_button_no_radius"
-            android:text="Save Changes"/>
+            android:text="@string/save_changes"/>
         <ProgressBar
             android:id="@+id/team_stats_summary_progress"
             style="?android:attr/progressBarStyleHorizontal"
