--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -3,8 +3,7 @@
              android:id="@+id/login_scroll_view"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:background="@color/colorBackground"
-    >
+             android:background="@color/colorBackground">
     <LinearLayout android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
