--- a/app/src/main/res/layout/player_info_fragment.xml
+++ b/app/src/main/res/layout/player_info_fragment.xml
@@ -28,7 +28,7 @@
         <ImageView
             android:id="@+id/player_info_image"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="3"
             android:src="@drawable/shirt"
             android:scaleType="fitStart"
