--- a/app/src/main/res/layout/player_list_fragment.xml
+++ b/app/src/main/res/layout/player_list_fragment.xml
@@ -1,38 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HorizontalScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:scrollbars="none">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="8dp">
+
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/first_row_width"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:id="@+id/players_list_name_layout"
+            android:layout_width="@dimen/first_row_width"
+            android:layout_height="32sp">
+
+            <TextView
+                android:id="@+id/players_list_name"
+                android:text="@string/name"
+                style="@style/list_header_text_view"/>
+            <CheckBox
+                android:id="@+id/players_list_name_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/players_list_name"
+                android:layout_toEndOf="@id/players_list_name"
+                android:button="@drawable/ic_keyboard_arrow_up"
+                android:checked="true"
+                android:clickable="false"/>
+
+        </RelativeLayout>
+        <android.support.v7.widget.RecyclerView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/player_name_recycler_view"
+            android:layout_width="@dimen/first_row_width"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <LinearLayout
             android:id="@+id/players_list_headers"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="32sp"
             android:orientation="horizontal">
-            <RelativeLayout
-                android:id="@+id/players_list_name_layout"
-                android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/players_list_name"
-                    android:text="@string/name"
-                    style="@style/list_header_text_view"/>
-                <CheckBox
-                    android:id="@+id/players_list_name_checkbox"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/players_list_name"
-                    android:layout_toEndOf="@id/players_list_name"
-                    android:button="@drawable/ic_keyboard_arrow_up"
-                    android:checked="true"
-                    android:clickable="false"/>
-
-            </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/players_list_position_layout"
@@ -81,6 +98,22 @@
                     android:id="@+id/players_list_team_checkbox"
                     android:layout_toRightOf="@id/players_list_team"
                     android:layout_toEndOf="@id/players_list_team"
+                    style="@style/list_header_check_box"/>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/players_list_fresher_layout"
+                android:layout_width="@dimen/row_width"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/players_list_fresher"
+                    android:text="@string/fresher"
+                    style="@style/list_header_text_view"/>
+                <CheckBox
+                    android:id="@+id/players_list_fresher_checkbox"
+                    android:layout_toRightOf="@id/players_list_fresher"
+                    android:layout_toEndOf="@id/players_list_fresher"
                     style="@style/list_header_check_box"/>
 
             </RelativeLayout>
@@ -252,3 +285,5 @@
             android:layout_height="match_parent"/>
     </LinearLayout>
 </HorizontalScrollView>
+
+</LinearLayout>
