--- a/app/src/main/res/layout/player_row.xml
+++ b/app/src/main/res/layout/player_row.xml
@@ -4,12 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list_row"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/list_player_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:width="@dimen/row_width"/>
+    android:layout_height="wrap_content"
+    android:paddingBottom="4dp">
     <TextView
         android:id="@+id/list_player_position"
         android:layout_width="wrap_content"
@@ -22,6 +18,12 @@
         android:width="@dimen/row_width"/>
     <TextView
         android:id="@+id/list_player_team"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:width="@dimen/row_width"
+        android:gravity="center"/>
+    <TextView
+        android:id="@+id/list_player_fresher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:width="@dimen/row_width"
