--- a/app/src/main/res/layout/team_list_fragment.xml
+++ b/app/src/main/res/layout/team_list_fragment.xml
@@ -3,7 +3,8 @@
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
     <LinearLayout
         android:baselineAligned="false"
         android:id="@+id/team_list_headers"
